--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="twitter_blue">#1DA1F2</color>
+    <color name="twitter_darkGray">#657786</color>
+    <color name="twitter_lightGray">#AAB8C2</color>
 </resources>
